nixidy/generated/prod/navidrome/Deployment-navidrome.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/controller: navidrome
    app.kubernetes.io/instance: navidrome
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: navidrome
  name: navidrome
  namespace: media
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: navidrome
      app.kubernetes.io/instance: navidrome
      app.kubernetes.io/name: navidrome
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        checksum/configMaps: 3ac966271c1c6db123ee12c58a1af5cfd72e66e2db677025d2ad410b19721f53
      labels:
        app.kubernetes.io/controller: navidrome
        app.kubernetes.io/instance: navidrome
        app.kubernetes.io/name: navidrome
    spec:
      automountServiceAccountToken: false
      containers:
        - envFrom:
            - configMapRef:
                name: navidrome
          image: deluan/navidrome:0.55.2@sha256:3a66e262b7ea836faa06c08ad5b32076c49e9e63e2fa4de10080c8e9be9f0846
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 4533
            timeoutSeconds: 1
          name: navidrome
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 4533
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 4533
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /data/cache
              name: cache
            - mountPath: /data
              name: data
            - mountPath: /music
              name: media-music
              readOnly: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      serviceAccountName: navidrome
      volumes:
        - emptyDir: {}
          name: cache
        - name: data
          persistentVolumeClaim:
            claimName: navidrome
        - name: media-music
          persistentVolumeClaim:
            claimName: media-music
