nixidy/generated/prod/navidrome/HTTPRoute-navidrome-navidrome-direct.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: navidrome
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: navidrome
  name: navidrome-navidrome-direct
  namespace: media
spec:
  hostnames:
    - navidrome.trdos.me
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: navidrome
          namespace: media
          port: 4533
          weight: 1
      filters:
        - requestHeaderModifier:
            remove:
              - X-Auth-Request-Preferred-Username
              - X-Forwarded-Preferred-Username
              - X-Forwarded-User
              - X-Forwarded-Email
              - Remote-User
          type: RequestHeaderModifier
      matches:
        - path:
            type: PathPrefix
            value: /rest
        - path:
            type: PathPrefix
            value: /share
        - path:
            type: PathPrefix
            value: /ping
